--- a/index.html
+++ b/index.html
@@ -51,6 +51,32 @@
         </div>
     </header>
 
+    <main>
+      <div class="container block-1 pt-0 mt-0 d-flex justify-content-between align-items-start rtl">
+
+        <div class="block1-right-text text-right">
+          <p class="block1-title">
+            <span class="block1-title-behtar">
+              بهتر 
+            </span>
+            <span>
+              سفر کنید
+            </span>
+          </p>
+
+          <p class="text-right block1-text">
+            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود
+          </p>
+        </div>
+
+        <div class="block1-left-img">
+          <img class="img-fluid" src="assetes/img/slide2-bg.png" alt="">
+        </div>
+      </div>
+      <div class="block1-wave w-100 h-auto">
+        <img class="img-fluid" src="assetes/img/011_bg_wave.svg" alt="">
+      </div>
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
