--- a/index.html
+++ b/index.html
@@ -228,7 +228,73 @@
         </div>
 
         <div class="block2-img-right">
-          <img src="assetes/img/mobile.svg" alt="Mobile-photo">
+          <img class="img-fluid" src="assetes/img/mobile.svg" alt="Mobile-photo">
+        </div>
+      </div>
+
+      <!-- #Block-3 -->
+      <div class="container mt-5 d-flex justify-content-center align-items-center">
+        <div class="block3-main-box w-100 h-auto d-flex flex-column justify-content-start align-items-center row">
+          <div class="block3-title-text col-12 text-center mb-2 mt-2">
+            دانلود اپلیکیشن جاسترو
+          </div>
+          <div class="col-12 text-center mb-3">
+            شما می تونید با وارد کردن شماره همراه خود در کادر پایین، لینک دانلود اپلیکیشن رو دریافت کنید
+          </div>
+          <div class="col-12 row block3-dl-box">
+            <div class="col-12 col-lg-6 d-flex pt-4">
+              <input class="block3-dl-btn text-white" type="button" value="دانلود">
+              <input class="block3-num-input" maxlength="11" type="text" placeholder="09">
+            </div>
+            <div class="col-12 col-lg-3">
+              <div class="block3-dl-icon-div">
+                <img class="img-fluid" src="assetes/img/021_dlbox_icon_download.svg" alt="icon-download">
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 text-center mt-2 mb-3">
+            یا از یکی از روش های زیر اپلیکیشن جاسترو را دانلود کنید
+          </div>
+
+          <div class="col-5 row d-flex justify-content-center align-items-center p-0 pb-3 block3-direct-dl-div">
+            <div class="col-12 col-lg-3 mr-2 d-flex">
+              <div class="block3-dl-green-btn d-flex justify-content-center align-items-center ">
+                <div class="dl-green-btn-text text-white">
+                  کافه بازار
+                </div>
+
+                <div class="dl-green-btn-img mx-1">
+                  <img class="img-fluid" src="assetes/img/bazar.png" alt="cafe-bazaar">
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-lg-3 mr-2 d-flex">
+              <div class="block3-dl-green-btn d-flex justify-content-center align-items-center ">
+                <div class="dl-green-btn-text text-white">
+                  Google Play
+                </div>
+
+                <div class="dl-green-btn-img mx-1">
+                  <img class="img-fluid" src="assetes/img/bazar.png" alt="cafe-bazaar">
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-lg-3 mr-2 d-flex">
+              <div class="block3-dl-green-btn d-flex justify-content-center align-items-center ">
+                <div class="dl-green-btn-text text-white">
+                  دانلود مستقیم
+                </div>
+
+                <div class="dl-green-btn-img mx-1">
+                  <img class="img-fluid" src="assetes/img/bazar.png" alt="cafe-bazaar">
+                </div>
+              </div>
+            </div>
+
+          </div>
         </div>
       </div>
     </main>
