--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
           </div>
 
           <div class="col-5 row d-flex justify-content-center align-items-center p-0 pb-3 block3-direct-dl-div">
-            <div class="col-12 col-lg-3 mr-2 d-flex">
+            <div class="col-12 col-lg-3 mr-2 d-flex mb-2">
               <div class="block3-dl-green-btn d-flex justify-content-center align-items-center ">
                 <div class="dl-green-btn-text text-white">
                   کافه بازار
@@ -270,7 +270,7 @@
               </div>
             </div>
 
-            <div class="col-12 col-lg-3 mr-2 d-flex">
+            <div class="col-12 col-lg-3 mr-2 d-flex mb-2">
               <div class="block3-dl-green-btn d-flex justify-content-center align-items-center ">
                 <div class="dl-green-btn-text text-white">
                   Google Play
@@ -282,7 +282,7 @@
               </div>
             </div>
 
-            <div class="col-12 col-lg-3 mr-2 d-flex">
+            <div class="col-12 col-lg-3 mr-2 d-flex mb-2">
               <div class="block3-dl-green-btn d-flex justify-content-center align-items-center ">
                 <div class="dl-green-btn-text text-white">
                   دانلود مستقیم
@@ -297,6 +297,43 @@
           </div>
         </div>
       </div>
+
+      <!-- #Block-4 -->
+      <div class="block-4-div h-100">
+
+        <div class="block4-text-div container h-100 pt-5 text-center text-white d-flex flex-column justify-content-between align-items-center block4-container">
+          <p class="block4-title mb-3">
+            آمادگی سفر
+          </p>
+
+          <p class="pb-3">
+            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود
+          </p>
+
+          <div class="d-flex mt-2 btn-amad">
+            <div class="block4-amadegi-btn d-flex justify-content-center align-items-center">
+              <div class="ready-orange-btn-text text-white">
+                آماده سفر شو
+              </div>
+
+              <div class="dl-green-btn-img mx-1">
+                <i class="fal fa-arrow-left"></i>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="block-4-bg w-100 d-none d-lg-block">
+          <img class="img-fluid w-100 h-100" src="assetes/img/022_bg_amadegisafar.svg" alt="">
+        </div>
+
+        <div class="block-4-bg-mobile w-100 d-block d-lg-none bg-dark mt-2">
+          
+        </div>
+      </div>
+
+
     </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
