--- a/index.html
+++ b/index.html
@@ -333,6 +333,54 @@
         </div>
       </div>
 
+      <!-- #Block-5 -->
+      <div class="block-5-div d-flex flex-column justify-content-center align-items-center mt-5">
+
+        <div class="container">
+          <div class="block5-top-text">
+            <div class="block5-title-text">
+              <p class="text-center">
+                ایده های سفر
+              </p>
+            </div>
+            <div class="block5-text text-right">
+              <p>
+                لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="block5-img-slider w-100 d-flex justify-content-center align-items-center mb-3">
+            <img class="block5-img rounded mr-3" src="assetes/img/emarat.png" alt="">
+            <img class="block5-img rounded mr-3" src="assetes/img/estakhr.png" alt="">
+            <img class="block5-img rounded mr-3" src="assetes/img/koh.png" alt="">
+            <img class="block5-img rounded mr-3" src="assetes/img/maldive.png" alt="">
+            <img class="block5-img rounded mr-3" src="assetes/img/tarikhi.png" alt="">
+
+        </div>
+
+        <div class="block5-email-div d-flex flex-column justify-content-center align-items-center">
+          <div class="container">
+            <div class="div">
+              <p class="text-center mt-3 rtl">
+                ایده های جدید رو هفتگی دریافت کن، کافیه آدرس ایمیل خودتون رو در کادر زیر وارد کنید و گزینه ثبت ایمیل را بزنید.
+              </p>
+            </div>
+          </div>
+  
+          <div class="email-input mb-3">
+            <input class="d-none d-lg-block block3-dl-btn text-white" type="button" value="ثبت ایمیل">
+            <input class="block5-email-input" type="text" placeholder="ایمیل خود را وارد کنید">
+            <div class="email-input-mobile">
+              <input class="d-block d-lg-none block5-email-btn text-white mt-3" type="button" value="ثبت ایمیل">
+            </div>
+          </div>
+        </div>
+
+
+      </div>
+
 
     </main>
 
