--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <header class="d-flex row justify-content-between flex-wrap flex-lg-nowrap">
+    <header class="header-div d-flex row w-100 justify-content-between flex-wrap flex-lg-nowrap">
       <div class="header-left-div m-0 p-0 d-none d-lg-flex">
         <img class="img-fluid" src="assetes/img/010_header_wave.png" alt="" />
         <div class="m-0 p-0 pt-5 px-5">
@@ -58,7 +58,7 @@
 
         <i class="far fa-search mx-5 mt-2 d-block d-lg-none"></i>
       </div>
-      <div class="header-right-div w-25 m-0 p-0 col-9 col-lg-3">
+      <div class="header-right-div m-0 p-0 col-9 col-lg-2">
         <img class="img-fluid" src="assetes/img/009_logo_Bg.svg" alt="" />
         <div class="logo-div d-flex justify-content-center align-items-center">
           <span class="logo-name m-2">جاسترو</span>
