fix header size

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <header class="header-div d-flex row w-100 justify-content-between flex-wrap flex-lg-nowrap">
+    <header class="d-flex row justify-content-between flex-wrap flex-lg-nowrap m-0 p-0">
       <div class="header-left-div m-0 p-0 d-none d-lg-flex">
         <img class="img-fluid" src="assetes/img/010_header_wave.png" alt="" />
         <div class="m-0 p-0 pt-5 px-5">
@@ -58,7 +58,7 @@
 
         <i class="far fa-search mx-5 mt-2 d-block d-lg-none"></i>
       </div>
-      <div class="header-right-div m-0 p-0 col-9 col-lg-2">
+      <div class="header-right-div w-25 m-0 p-0 col-9 col-lg-2">
         <img class="img-fluid" src="assetes/img/009_logo_Bg.svg" alt="" />
         <div class="logo-div d-flex justify-content-center align-items-center">
           <span class="logo-name m-2">جاسترو</span>
@@ -349,7 +349,7 @@
         class="container mt-5 d-flex justify-content-center align-items-center"
       >
         <div
-          class="block3-main-box w-100 h-auto d-flex flex-column justify-content-start align-items-center row"
+          class="block3-main-box w-100 h-auto d-flex flex-column justify-content-start align-items-center row m-0 p-0"
         >
           <div class="block3-title-text col-12 text-center mb-2 mt-2">
             دانلود اپلیکیشن جاسترو
@@ -358,7 +358,7 @@
             شما می تونید با وارد کردن شماره همراه خود در کادر پایین، لینک دانلود
             اپلیکیشن رو دریافت کنید
           </div>
-          <div class="col-12 row block3-dl-box">
+          <div class="col-12 row block3-dl-box m-0 p-0">
             <div class="col-12 col-lg-6 d-flex pt-4">
               <input
                 class="block3-dl-btn text-white"
@@ -388,7 +388,7 @@
           </div>
 
           <div
-            class="col-5 row d-flex justify-content-center align-items-center p-0 pb-3 block3-direct-dl-div"
+            class="col-5 row d-flex justify-content-center align-items-center m-0 p-0 pb-3 block3-direct-dl-div"
           >
             <div class="col-12 col-lg-3 mr-2 d-flex mb-2">
               <div
@@ -571,7 +571,7 @@
 
       <div class="footer-div-desktop d-none d-lg-block">
 
-        <div class="footer-text-div row">
+        <div class="footer-text-div row m-0 p-0">
           <div class="col-3 d-flex footer-email-div w-auto h-auto">
             <i class="fal fa-envelope text-white"> test@gmail.com</i>
             <i class="fas fa-phone text-white mx-4"></i>
@@ -630,7 +630,7 @@
         </div>
       </div>
 
-      <div class="footer-div-mobile d-block d-lg-none row">
+      <div class="footer-div-mobile d-block d-lg-none row m-0 p-0">
         <div class="col-12 pt-2 d-flex">
           <div class="col-6  social-acc-mobile-div d-flex">
             <div class="social-mobile-icon-div rounded-circle bg-info text-center mr-2">
