--- a/index.html
+++ b/index.html
@@ -358,8 +358,8 @@
             شما می تونید با وارد کردن شماره همراه خود در کادر پایین، لینک دانلود
             اپلیکیشن رو دریافت کنید
           </div>
-          <div class="col-12 row block3-dl-box m-0 p-0">
-            <div class="col-12 col-lg-6 d-flex pt-4">
+          <div class="col-12 row block3-dl-box m-0 p-0 d-flex justify-content-center align-items-center">
+            <div class="col-12 col-lg-6 d-flex pt-4 block3-dl-box-elements">
               <input
                 class="block3-dl-btn text-white"
                 type="button"
@@ -372,7 +372,7 @@
                 placeholder="09"
               />
             </div>
-            <div class="col-12 col-lg-3">
+            <div class="col-12 col-lg-3 mt-2 block3-dl-box-elements">
               <div class="block3-dl-icon-div">
                 <img
                   class="img-fluid"
@@ -546,7 +546,7 @@
 
           <div class="email-input mb-3">
             <input
-              class="d-none d-lg-block block3-dl-btn text-white"
+              class="d-none d-lg-block block5-email-btn text-white"
               type="button"
               value="ثبت ایمیل"
             />
